# firewall

./: .gitignore  Cargo.toml  README.md  SHIELD_RESEARCH_2026-07-06.md  build.rs
.github/workflows/: ci.yaml
benches/: firewall_bench.rs
scripts/: export_discovered_hosts.sh
src/: dynamic.rs  lib.rs
