[package]
name = "spider_firewall"
version = "2.36.1"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
description = "Firewall to use for Spider Web Crawler."
repository = "https://github.com/spider-rs/spider_firewall"
readme = "README.md"
keywords = ["crawler", "firewall"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/spider_firewall"
edition = "2018"

[dependencies]
phf = { version = "0.13", features = ["macros"] }
fst = "0.4"
# Runtime "discovered-bad" overlay (feature = "dynamic"). Optional: when the
# feature is off neither crate is resolved or compiled, so the default build is
# byte-identical. Both are pure-Rust and cross-platform.
arc-swap = { version = "1", optional = true }
crossbeam-queue = { version = "0.3", optional = true }
foldhash = { version = "0.1", optional = true }

[features]
default = ["default-tls", "bad", "ads", "tracking", "gambling", "small"]
bad = []
ads = []
tracking = []
gambling = []
small = []
medium = ["small"]
large = ["medium"]
ip = []
# Lock-free runtime feedback loop: report_bad/seed_dynamic + a TTL'd overlay the
# read path consults. Opt-in; additive; no behavior change when off.
dynamic = ["dep:arc-swap", "dep:crossbeam-queue", "dep:foldhash"]
rustls = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hashbrown = "0.15"
ua_generator = { version = "^0.5" }
fst = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "firewall_bench"
harness = false
